--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   },
   "homepage": "https://github.com/CptnReef/BINGO_websocket.io#readme",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "nodemailer": "^6.6.5",
+    "nodemailer-mailgun-transport": "^2.1.3",
     "socket.io": "^4.2.0"
   }
 }
